src/templates/examples/styles.module.scss
@import '@/styles/base';

.template_examples {
    .wrap {
        padding: px-to-rem(30) var(--wrap) 0;
    }

    .section {

        @at-root * + & {
            margin-top: px-to-rem(40);
        }

        &__header {
            @include text-header-2;
        }

        &__content {
            margin-top: px-to-rem(20);
        }

    }

    .mini_placeholder {
        position: relative;
        width: 300px;
        max-width: 100%;
        height: 225px;
    }

}

